提交最新的表，增加了荣云的代码

--- a/src/main/webapp/WEB-INF/config/String.properties
+++ b/src/main/webapp/WEB-INF/config/String.properties
@@ -18,3 +18,5 @@ notLoginTips =\u8981\u5148\u767B\u5F55\u624D\u53EF\u4EE5\u505A\u5176\u4ED6\u64CD
 #\u63A8\u8350
 paramErrorTips=\u4F60\u641E\u4EC0\u4E48\u9B3C\uFF0C\u4E71\u4F20\u53C2\u6570\u554A
 recommodErrorTips=\u5339\u914D\u9519\u8BEF,\u518D\u6765\u4E00\u53D1\u5427
+#token
+getTokenError=\u83B7\u53D6token\u5931\u8D25
