--- a/pom.xml
+++ b/pom.xml
@@ -85,10 +85,17 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.2.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.4</version>
+        </dependency>
+
 
     </dependencies>
 
     <build>
+
         <finalName>Confident</finalName>
         <plugins>
             <plugin>
