--- a/src/main/webapp/WEB-INF/config/String.properties
+++ b/src/main/webapp/WEB-INF/config/String.properties
@@ -26,13 +26,21 @@ blogTitleNullTips=\u52A8\u6001\u6D88\u606F\u5934\u4E0D\u80FD\u4E3A\u7A7A
 blogContentNullTips=\u52A8\u6001\u5185\u5BB9\u4E0D\u80FD\u4E3A\u7A7A
 blogAccountNullTips=\u522B\u95F9\uFF0C\u8C01\u8BA9\u4F60\u4E71\u4F20\u4E1C\u897F\u7684
 
+#\u793C\u7269
+giftIdNullTips=\u793C\u7269id\u4E0D\u80FD\u4E3A\u7A7A
+giftCountNullTips=\u793C\u7269\u4E2A\u6570\u4E0D\u80FD\u4E3A\u7A7A
+giftToUserNull=\u8D60\u9001\u793C\u7269\u7684\u7528\u6237\u4E0D\u5B58\u5728
 
+
+#================\u6587\u4EF6\u5939===================
 #\u5934\u50CF\u7684\u6587\u4EF6\u5939
-headIconFolder=/images/headIcon
-blogPhotoPath=/images/blog
+headIconFolder=/images/headIcon/
+#\u52A8\u6001\u7684\u6587\u4EF6\u5939
+blogPhotoPath=/images/blog/
+#json\u7684\u6587\u4EF6\u5939
+jsonFolderPath=/json/
 
 
-
-
+#==================url==================
 #baseUrl
 baseUrl = "http://localhost:8080/"
