添加赠送礼物的逻辑

--- a/src/main/webapp/WEB-INF/config/String.properties
+++ b/src/main/webapp/WEB-INF/config/String.properties
@@ -30,6 +30,7 @@ blogAccountNullTips=\u522B\u95F9\uFF0C\u8C01\u8BA9\u4F60\u4E71\u4F20\u4E1C\u897F
 giftIdNullTips=\u793C\u7269id\u4E0D\u80FD\u4E3A\u7A7A
 giftCountNullTips=\u793C\u7269\u4E2A\u6570\u4E0D\u80FD\u4E3A\u7A7A
 giftToUserNull=\u8D60\u9001\u793C\u7269\u7684\u7528\u6237\u4E0D\u5B58\u5728
+giftNumNotEnough=\u793C\u7269\u6570\u91CF\u4E0D\u591F
 
 
 #================\u6587\u4EF6\u5939===================
